--- a/porcupine/apps/main/db.yml
+++ b/porcupine/apps/main/db.yml
@@ -3,19 +3,36 @@ indices:
   is_collection: No
 
 items:
-  - id: 'ROOT'
+  - id: ROOT
     type: porcupine.schema.system.RootContainer
     name: Root Container
-    is_system: Yes
-    security:
-      everyone: READER
+    description: The mother of all
+    sys: Yes
+    acl:
+      everyone: 1
     children:
       - id: admintools
         type: porcupine.schema.system.AdminTools
         name: Administrative Tools
-        is_system: Yes
+        sys: Yes
+        acl: {}
+        children:
+          - id: users
+            type: porcupine.schema.system.users.UsersContainer
+            name: Users & Groups
+            sys: Yes
+            children:
+              - id: guest
+                name: Guest
+                description: Guest User
+                type: porcupine.schema.system.users.GuestUser
+                sys: Yes
+              - id: admin
+                name: Administrator
+                type: porcupine.schema.system.users.User
 
-  - id: rb
+  - id: RB
     type: porcupine.schema.system.RecycleBin
     name: Recycle Bin
-    is_system: Yes
+    sys: Yes
+    acl: {}
