Added views for attribute and resource updating

--- a/porcupine/apps/main/db.yml
+++ b/porcupine/apps/main/db.yml
@@ -33,7 +33,7 @@ items:
                 type: porcupine.apps.schema.users.SystemUser
                 sys: Yes
               - id: admin
-                name: Administrator
+                name: admin
                 password: admin
                 type: porcupine.apps.schema.users.User
 
