renamed sys and p_id data types to is_system and parent_id

--- a/porcupine/apps/db.yml
+++ b/porcupine/apps/db.yml
@@ -7,31 +7,31 @@ items:
     type: porcupine.apps.schema.root.Root
     name: Root Container
     description: The mother of all
-    sys: Yes
+    is_system: Yes
     acl:
       everyone: 1
     children:
       - id: admintools
         type: porcupine.apps.schema.admintools.AdminTools
         name: Administrative Tools
-        sys: Yes
+        is_system: Yes
         acl: {}
         children:
           - id: users
             type: porcupine.apps.schema.users.UsersContainer
             name: Users & Groups
-            sys: Yes
+            is_system: Yes
             children:
               - id: guest
                 name: Guest
                 description: Guest User
                 type: porcupine.apps.schema.users.Membership
-                sys: Yes
+                is_system: Yes
               - id: system
                 name: SYSTEM
                 description: System User
                 type: porcupine.apps.schema.users.SystemUser
-                sys: Yes
+                is_system: Yes
               - id: admin
                 name: admin
                 password: admin
@@ -51,5 +51,5 @@ items:
   - id: RB
     type: porcupine.apps.schema.root.RecycleBin
     name: Recycle Bin
-    sys: Yes
+    is_system: Yes
     acl: {}
