Added recycle capability to items

--- a/porcupine/apps/db.yml
+++ b/porcupine/apps/db.yml
@@ -44,7 +44,7 @@
                 - admin
 
 - id: RB
-  type: porcupine.apps.schema.root.RecycleBin
+  type: porcupine.core.schema.recycle.RecycleBin
   name: Recycle Bin
   is_system: Yes
   acl: {}
