--- a/porcupine/apps/db.yml
+++ b/porcupine/apps/db.yml
@@ -1,5 +1,5 @@
 - id: ROOT
-  type: porcupine.apps.schema.root.Root
+  type: Root
   name: Root Container
   description: The mother of all
   is_system: Yes
@@ -7,44 +7,44 @@
     everyone: 1
   children:
     - id: admintools
-      type: porcupine.apps.schema.admintools.AdminTools
+      type: AdminTools
       name: Administrative Tools
       is_system: Yes
       acl: {}
       children:
         - id: users
-          type: porcupine.apps.schema.users.UsersContainer
+          type: UsersContainer
           name: Users & Groups
           is_system: Yes
           children:
             - id: guest
               name: Guest
               description: Guest User
-              type: porcupine.apps.schema.users.Membership
+              type: Membership
               is_system: Yes
             - id: system
               name: SYSTEM
               description: System User
-              type: porcupine.apps.schema.users.SystemUser
+              type: SystemUser
               is_system: Yes
             - id: admin
               name: admin
               password: admin
-              type: porcupine.apps.schema.users.User
+              type: User
             - id: everyone
               name: Everyone Group
-              type: porcupine.apps.schema.groups.EveryoneGroup
+              type: EveryoneGroup
             - id: authusers
               name: Authenticated Users
-              type: porcupine.apps.schema.groups.AuthUsersGroup
+              type: AuthUsersGroup
             - id: administrators
               name: Administrators
-              type: porcupine.apps.schema.groups.Group
+              type: Group
               members:
                 - admin
 
 - id: RB
-  type: porcupine.core.schema.recycle.RecycleBin
+  type: RecycleBin
   name: Recycle Bin
   is_system: Yes
   acl: {}
