added DELETE endpoints for removing collection members. Fixed exists connector method. Made some items systemic

--- a/porcupine/apps/db.yml
+++ b/porcupine/apps/db.yml
@@ -34,12 +34,15 @@
             - id: everyone
               name: Everyone Group
               type: EveryoneGroup
+              is_system: Yes
             - id: authusers
               name: Authenticated Users
               type: AuthUsersGroup
+              is_system: Yes
             - id: administrators
               name: Administrators
               type: Group
+              is_system: Yes
               members:
                 - admin
 
