--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 sanic==0.8.3
 couchbase>=2.2.3
-PyYAML>=3.12
+PyYAML>=5.1
 lru-dict>=1.1.6
 namedlist>=1.7
 cbor>=1.0.0
 arrow>=0.10.0
 aiofiles==0.4.0
+aiostream==0.3.1
 aiocron
 mmh3>=2.4
 validate-email>=1.3
