--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ PyYAML==5.1.1
 lru-dict==1.1.6
 namedlist==1.7
 cbor==1.0.0
-arrow==0.13.1
+pendulum==2.0.5
+orjson==2.0.6
 aiofiles==0.4.0
 aiostream==0.3.1
 aiocron==1.3
